[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/background/background.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/player/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/hud/hud.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/main_screen/main_screen.gd" type="Script" id=5]

[node name="ShmupScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 5 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="EnemyFormations" type="Control" parent="."]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 180, 519 )
max_speed = 500.0

[node name="WaveLabel" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
text = "wave 1/3"
align = 1
valign = 1

[node name="HUD" parent="." instance=ExtResource( 4 )]
mouse_filter = 1

[connection signal="player_ready" from="Player" to="." method="_on_Player_player_ready"]
[connection signal="ship_exploded" from="Player" to="." method="_on_Player_ship_exploded"]
